feat: allow restoring and reuse of current window, modify app bar, add back and forward buttons

--- a/crates/switchboard-app/src/ui_shell.html
+++ b/crates/switchboard-app/src/ui_shell.html
@@ -10,8 +10,14 @@
 </head>
 <body>
   <div class="topbar">
-    <div class="nav-row">
-      <input id="url" class="uri-input" autocomplete="off" spellcheck="false">
+    <div class="topbar-inner">
+      <div class="titlebar-pad"></div>
+      <div class="nav-row">
+        <button id="nav-back" class="nav-btn" type="button" aria-label="Back">&lt;</button>
+        <button id="nav-forward" class="nav-btn" type="button" aria-label="Forward">&gt;</button>
+        <input id="url" class="uri-input" autocomplete="off" spellcheck="false">
+      </div>
+      <div class="titlebar-pad"></div>
     </div>
   </div>
   <div class="leftpane">
