feat: ui shell and workprofile, tab selections implementation

--- a/crates/switchboard-app/src/ui_shell.html
+++ b/crates/switchboard-app/src/ui_shell.html
@@ -28,6 +28,10 @@
     <div class="tab-pane">
       <div class="tab-pane-header">
         <div id="workspace-title" class="workspace-title">Workspace</div>
+        <div class="workspace-actions">
+          <button id="workspace-rename" class="workspace-action" type="button" title="Rename Workspace">Rename</button>
+          <button id="workspace-delete" class="workspace-action danger" type="button" title="Delete Workspace">Delete</button>
+        </div>
       </div>
       <div id="tab-list" class="tab-list"></div>
       <button id="tab-new" class="tab-new" type="button">+ New Page</button>
