--- a/crates/switchboard-app/src/ui_shell.html
+++ b/crates/switchboard-app/src/ui_shell.html
@@ -56,6 +56,7 @@
               </div>
             </form>
             <button id="profile-rename" class="profile-menu-action" type="button">Rename Active Profile</button>
+            <button id="profile-delete" class="profile-menu-action danger" type="button">Delete Active Profile</button>
           </div>
         </div>
         <button id="profile-new" class="profile-new" type="button" aria-label="New Profile">+</button>
